--- a/Code/app/styles/tables.css
+++ b/Code/app/styles/tables.css
@@ -28,18 +28,6 @@
     display: table-footer-group!important;
 }
 
-.table-hover tbody tr .btn-muted, .well .btn-muted {
-    transition: opacity 500ms ease;
-}
-
-.table-hover tbody tr:not(:hover) .btn-muted, .well:not(:hover) .btn-muted {
-    color: #111;
-    background-color: #eee;
-    border-color: #bbb;
-    opacity: .2;
-    transition: opacity 500ms ease;
-}
-
 .table-hover tbody tr:hover > td,
 .table-hover tbody tr:hover > th {
     transition: background-color 200ms ease;
